[tool.poetry]
name = "dan"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
python-xmp-toolkit = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pytest-watch = "^4.2.0"
factory_boy = "^3.0.1"
ipdb = "^0.13.3"
responses = "^0.12.0"
mypy = "^0.782"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
